Creating Recipe detail activity and fragments. Finished navigating between the fragments. Finished phone layouts. Still needs to make master detail view

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,9 @@
         <item name="android:textColor">@color/colorAccent</item>
     </style>
 
+    <style name="ImportanceText.Medium" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
 </resources>
