--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.leonardo.bakingapp.view.RecipeDetailActivity">
     <FrameLayout
-        android:id="@+id/main_fragment_container"
+        android:id="@+id/fragment_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </android.support.constraint.ConstraintLayout>
