--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -15,7 +15,6 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView_recipes"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adapter="@{presenter.adapter}"/>
+            android:layout_height="match_parent" />
     </FrameLayout>
 </layout>
