--- a/app/src/main/res/layout-land/recipe_detail_step_detail_fragment.xml
+++ b/app/src/main/res/layout-land/recipe_detail_step_detail_fragment.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <com.google.android.exoplayer2.ui.SimpleExoPlayerView
-            android:id="@+id/mediaPlayerView"
+            android:id="@+id/step_media_player_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintEnd_toEndOf="parent"
